[package]
description = "Paradex client library"
edition = "2024"
license = "MIT"
name = "paradex"
repository = "https://github.com/snow-avocado/paradex-rs"
version = "0.8.0"

[dependencies]
alloy-primitives = {version = "1", default-features = false, optional = true}
alloy-signer = {version = "2", default-features = false, optional = true}
alloy-signer-local = {version = "2", default-features = false, optional = true}
alloy-sol-types = {version = "1", default-features = false, optional = true}
cached = {version = "2", default-features = false, features = ["proc_macro"]}
chrono = {version = "0.4", default-features = false, features = ["now"]}
futures-util = {version = "0.3", default-features = false}
jsonrpsee-core = {version = "0.26", default-features = false}
jsonrpsee-types = {version = "0.26", default-features = false}
log = {version = "0.4", default-features = false}
num-bigint = {version = "0.4.6", default-features = false, optional = true}
num-traits = {version = "0.2.19", default-features = false, optional = true}
reqwest = {version = "0.13", default-features = false, features = ["json", "query"]}
rust_decimal = {version = "1", default-features = false, features = ["serde"]}
rustls = {version = "0.23", default-features = false, features = ["aws-lc-rs"]}
serde = {version = "1", default-features = false}
serde_json = {version = "1", default-features = false}
serde_tuple = {version = "1", default-features = false}
serde_with = {version = "3", default-features = false}
sha2 = {version = "0.10", default-features = false, optional = true}
starknet-core = {version = "0.16", default-features = false}
starknet-crypto = {version = "0.8", default-features = false}
starknet-signers = {version = "0.14", default-features = false}
thiserror = {version = "2", default-features = false}
tokio = {version = "1", default-features = false, features = ["macros"]}
tokio-tungstenite = {version = "0.28", default-features = false, features = ["connect", "rustls-tls-native-roots"]}

[features]
default = []
onboarding = [
  "alloy-signer",
  "alloy-signer-local",
  "alloy-primitives",
  "alloy-sol-types",
  "num-bigint",
  "num-traits",
  "sha2",
]

[dev-dependencies]
clap = {version = "4", default-features = false, features = ["std", "derive"]}
criterion = {version = "0.8", default-features = false}
mimalloc = {version = "0.1", default-features = false}
simple_logger = {version = "5", default-features = false}
tokio = {version = "1", default-features = false, features = ["macros", "rt-multi-thread"]}

[profile.bench]
debug = true

[[bench]]
harness = false
name = "order_sign"
